<resources>
    <string name="app_name">A and S Distributor</string>
    <string name="inventory_list_title">Inventory List</string>
    <string name="inventoryMenu">Carousel Menu</string>
    <string name="fetching_records_please_wait">Fetching Records, Please Wait</string>
    <string name="accept_camera_permission_msg">Please provide permission to pick images.</string>
    <string name="add_at_least_one_item">Please add at-least one item to order.</string>
    <string name="unable_to_update_order">Unable to update order try again.</string>
    <string name="order_confirm_successfully">Order confirm successfully.</string>
    <string name="order_status_updated_successfully">Order status updated successfully.</string>
    <string name="failed_order_status_updated">Failed! to update Order Status.</string>
    <string name="common_blocked_user_message">User is blocked Please contact administrator.</string>
    <string name="user_not_found">User Not Found! Please check username and password and try again.</string>
    <string name="no_result_found">Result Not Found...</string>
    <string name="no_internet_connection">Please check your Internet Connection and Try again.</string>
    <string name="username_not_found">Unable to found user. Please check the username and try again</string>
    <string name="password_not_match">Password not match recheck and  try again</string>
    <string name="email_and_number_not_match">Email or number you entered is not match with register email and number. Please try again</string>
    <string name="inventory_image_limit">Only 4 images allowed per inventory.</string>
    <string name="delete_inventory_image_title">Delete Image.</string>
    <string name="delete_inventory_image">Do you really want to delete inventory image?.</string>
    <string name="inventory_deleted_successfully">Image deleted successfully.</string>
    <string name="inventory_deleted_failed">Unable to deleted Image. Please try again</string>
    <string name="enter_username">Please Enter Username.</string>
    <string name="enter_password">Please Enter Password.</string>
    <string name="select_images">Select Images</string>
    <string name="fav">Favorites</string>
    <string name="sort">Sort By</string>
    <string name="no_fav">No Favourites Found</string>
    <string name="history_not_avalable">No History Found</string>
    <string name="calender_title">Calender wise vehicals</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="purchase_price_hint">Ex. 1,000</string>
    <string name="item_name">Item Name</string>
    <string name="select_image">Select Image</string>
    <string name="app_id_for_adds">ca-app-pub-6054010600013654~3617661011</string>
    <string name="testing_banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="testing_interstitialAd_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_customer_detail01">ca-app-pub-6054010600013654/2726223500</string>
    <string name="banner_add_inventory01">ca-app-pub-6054010600013654/9809333140</string>
    <string name="banner_add_inventory02">ca-app-pub-6054010600013654/2599065143</string>
    <string name="interstitialAd_comp_order_list01">ca-app-pub-6054010600013654/1071388725</string>
    <string name="interstitial_material_list_01">ca-app-pub-6054010600013654/4173863089</string>
    <string name="error_length_common">%s should be maximum of %d character.</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="invoice_number_empty">Please Enter Invoice Number.</string>
    <string name="date_of_invoice">Date of Invoice</string>
    <string name="date_of_invoice_empty">Please Enter Date of Invoice.</string>
    <string name="due_date">Due Date</string>
    <string name="due_date_empty">Please Enter Due Date.</string>
    <string name="payment_term">Payment term</string>
    <string name="payment_term_hint">Ex. 45 Days</string>
    <string name="payment_term_empty">Please Enter Payment term.</string>
    <string name="discount_on_order">Discount</string>
    <string name="cess">Cess</string>
    <string name="payment_receive">Payment Receive</string>
    <string name="total_credit_applied">Total Credit Applied</string>
    <string name="total_debit_applied">Total Debit Applied</string>
    <string name="balance_due">Balance Due</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="enter_date">Enter Date</string>
    <string name="hint_name">Ex. Pen</string>
    <string name="error_name_length">Name should be maximum of 256 character.</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_hint">Ex. 100</string>
    <string name="error_quantity_length">Quantity should be less then 15 digit.</string>
    <string name="unit">Unit</string>
    <string name="unit_hint">Ex. Box or Piece</string>
    <string name="mandatory">*</string>
    <string name="inventory_item">Inventory List</string>
    <string name="order_details">Order Details</string>
    <string name="material">Material</string>
    <string name="customer_item">Customer List</string>
    <string name="company_details">Company Details</string>
    <string name="order">Order</string>
    <string name="discounted_items">Discounted Items</string>
    <string name="add_customer_title">Customer Details</string>
    <string name="add">Add</string>
    <string name="tag">tag</string>
    <string name="dashboard">Dashboard</string>
    <string name="inventory_item_purechase_shop_details">Purchase Shop Details</string>
    <string name="unit_price">Unit Price</string>
    <string name="unit_price_hint">Ex. 10/Unit</string>
    <string name="selling_price">Selling Price</string>
    <string name="selling_price_hint">Ex. 12</string>
    <string name="order_quantity">Ex. Order Quantity</string>
    <string name="brand_name">Brand Name</string>
    <string name="brand_name_hint">Ex. Lexi</string>
    <string name="model_name">Model Name</string>
    <string name="model_name_hint">Ex. Lexi Jet Ball Pen</string>
    <string name="hsn_code">HSN Code</string>
    <string name="hsn_code_hint">Ex. 96081019 for Pen.</string>
    <string name="item_color">Color</string>
    <string name="item_color_hint">Ex. Blue</string>
    <string name="item_size">Size</string>
    <string name="item_size_hint">Ex. Regular</string>
    <string name="order_fab">ORDER</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="send">SEND</string>
    <string name="exit">EXIT</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>
    <string name="no">NO</string>
    <string name="search">search</string>
    <string name="cancel">CANCEL</string>
    <string name="update">UPDATE</string>
    <string name="save">SAVE</string>
    <string name="logout">LOGOUT</string>
    <string name="confirm_order">CONFIRM ORDER</string>
    <string name="confirm_delivery">CONFIRM DELIVERY</string>
    <string name="sign">CONFIRM SIGN</string>
    <string name="done">DONE</string>
    <string name="unable_to_save_order">Unable to save order. Please try again latter.</string>
    <string name="fource_update_massage">Newer version of app is available. It is recommended to download new version.
   App Will close and redirect to play store now.</string>
    <string name="recommended_update_massage">Newer version of app is available. It is recommended to download new version.</string>
    <string name="purchase_shop_name">Shop Name</string>
    <string name="confirm_mail_check_box">Confirm order and send mail as well</string>
    <string name="purchase_shop_name_hint">Ex. Name of store</string>
    <string name="purchase_shop_contact">Contact Number</string>
    <string name="purchase_shop_contact_hint">Ex. Shop contact</string>
    <string name="purchase_shop_contact_length_msg">Please Enter valid mobile number.</string>
    <string name="purchase_shop_address">Shop Address</string>
    <string name="purchase_shop_address_hint">Ex. Address</string>
    <string name="inventory_save_message">Inventory data save successfully.</string>
    <string name="inventory_updated_message">Inventory data updated successfully.</string>
    <string name="customer_save_message">Customer information save successfully</string>
    <string name="customer_updated_message">Customer information updated successfully</string>
    <string name="remove_inventory_item_title">Remove Inventory Item</string>
    <string name="customer_discount_dialog_item_title">Discounted Item</string>
    <string name="customer_discount_amount">Discounted Amount</string>
    <string name="enter_register_mail">Please enter register mail id</string>
    <string name="enter_register_mobile_number">Please enter register Mobile No.</string>
    <string name="remove_discount_title">Remove Discount</string>
    <string name="failed_to_add_discount">Failed to add discount try again.</string>
    <string name="exit_app_title">Exit</string>
    <string name="exit_app_message">Do you really want to exit?</string>
    <string name="remove_discount_message">Do you really want to delete discount ?</string>
    <string name="customer_name">Company Name</string>
    <string name="customer_name_hint">Ex. Google Co.op Pvt Ltd.</string>
    <string name="customer_mail">Company Mail</string>
    <string name="customer_mail_hint">Ex. google@gmail.com</string>
    <string name="customer_mail_invalid_format_msg">Please Enter valid email.</string>
    <string name="customer_phone">Company Contact</string>
    <string name="customer_phone_hint">Ex. Company contact number</string>
    <string name="customer_gst">GST Number</string>
    <string name="customer_gst_hint">Ex. 08AAACS8449C1ZP</string>
    <string name="customer_gst_length_msg">Please enter valid GST number.</string>
    <string name="customer_contact_person">Contact Person Name</string>
    <string name="customer_contact_person_hint">Ex. Sunder Pechai</string>
    <string name="customer_contact_number">Contact Person Mobile</string>
    <string name="customer_contact_number_hint">Ex. 10 digit contact number</string>
    <string name="description">Description</string>
    <string name="customer_requirement">Requirements</string>
    <string name="customer_requirement_hint">Ex. Packaging, House keeping, Stationary, Safety and Item names etc.</string>
    <string name="customer_description_hint">Ex. Description about company what manufacture etc.</string>
    <string name="customer_address">Address</string>
    <string name="customer_address_hint">Address</string>
    <string name="enter_customer_number">Please Enter Customer Number.</string>
    <string name="enquiry">Enquiry</string>
    <string name="section_title_description">Description</string>
    <string name="section_title_customer_details">Company Details</string>
    <string name="section_title_contact_details">Contact</string>
    <string name="section_title_customer_requirement">Customer Requirements</string>
    <string name="section_title_login_details">Login Details</string>
    <string name="section_title_forgot_password">Forgot Password Details</string>
    <string name="section_title_feedback">Feedback</string>
    <string name="title_activity_login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="hint_username">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="feedback_title">Subject</string>
    <string name="title">Small Title</string>
    <string name="feedback_message">Message...</string>
</resources>