<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="4dp">

  <androidx.cardview.widget.CardView
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    android:clickable="true"
    android:elevation="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="5dp">

    <com.aandssoftware.aandsinventory.ui.component.ContaintValidationLinerLayout
      android:id="@+id/llContaint"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <com.aandssoftware.aandsinventory.ui.component.SectionLinerLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:sectionHeader="@string/section_title_forgot_password">

        <com.aandssoftware.aandsinventory.ui.component.CustomEditText
          android:id="@+id/edtEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/customer_mail_hint"
          android:inputType="textEmailAddress"
          app:mandatory="true"
          app:maxLengthErrorMsg="@string/customer_mail_invalid_format_msg"
          app:title="@string/enter_register_mail"
          app:validationErrorMsg="@string/customer_mail_invalid_format_msg" />

        <com.aandssoftware.aandsinventory.ui.component.CustomEditText
          android:id="@+id/edtMobileNumber"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:hint="@string/customer_phone_hint"
          android:inputType="numberDecimal"
          app:mandatory="true"
          app:mandatoryErrorMsg="@string/enter_customer_number"
          app:maxLength="@integer/int_15"
          app:title="@string/enter_register_mobile_number" />

      </com.aandssoftware.aandsinventory.ui.component.SectionLinerLayout>
    </com.aandssoftware.aandsinventory.ui.component.ContaintValidationLinerLayout>

  </androidx.cardview.widget.CardView>
</RelativeLayout>